remove home.html refs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 
 <head>
-<!-- Stylesheets -->
+    <!-- Stylesheets -->
     <!-- Custom Stylesheet -->
     <link href="stylesheets/konjoianedu.css" type="text/css" rel="stylesheet">
     <!-- Font -->
@@ -12,7 +12,8 @@
     <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
     <!-- Framework (null) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-<!-- Favorite Icons -->
+    <script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <!-- Favorite Icons -->
     <!-- Favicon for Opera SpeedDial -->
     <link rel="icon" type="image/png" href="/images/favicons/favicon_opera.png" />
     <!-- Traditional Favicon -->
@@ -21,7 +22,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/favicons/apple-touch-144.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/favicons/apple-touch-72.png">
     <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-48.png">
-<!-- Social Networking Meta-Data -->
+    <!-- Social Networking Meta-Data -->
     <!-- Twitter Card Summary -->
     <meta name="twitter:card" content="The Konjoian Education center is focused on creating an easier way to succeed.">
     <!-- Twitter Account Dedicated for Site -->
@@ -38,48 +39,188 @@
     <meta property="og:image" content="images/assets/IMG_1416.JPG">
     <!-- Character Set -->
     <meta charset="UTF-8">
-<!-- Search Engine Optimization -->
+    <!-- Search Engine Optimization -->
     <!-- Description -->
     <meta name="description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
     <!-- Keywords -->
-    <meta name="keywords" content="tutoring andover, andover ma, andover mass, tutoring service, tutors, near, me, konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
+    <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="msvalidate.01" content="21EBDFB89CE6B9048DAD41E88AAAEC73" />
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
+<div class="navbar-fixed">
+    <nav>
+        <!-- DROPDOWN FOR PROGRAMS -->
+        <ul id="programs" class="dropdown-content dropdown-content-home-page">
+            <li><a href="/programs/index.html">Programs Home</a></li>
+            <li class="divider"></li>
+            <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
+            <li><a href="/programs/study-skills/">Study Skills</a></li>
+            <li><a href="/programs/test-prep/">Test Preparation</a></li>
+            <li><a href="/programs/college-counseling/">College Counseling</a></li>
+        </ul>
+        <div class="nav-wrapper container-fluid">
+            <!-- NAVIGATION SITE NAME -->
+            <a href="/index.html" class="brand-logo"><img src="images/favicons/yuge.png">onjoian Education Center</a>
+            <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <!-- UNORDERED LIST FOR DESKTOP NAV -->
+            <ul class="desktop-size right hide-on-med-and-down">
+                <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
+                <li><a href="/contact/">Contact</a></li>
+                <li><a href="/testimonials/">Testimonials</a></li>
+            </ul>
+            <!-- UNORDERED LIST FOR MOBILE NAV -->
+            <ul class="side-nav" id="mobile-demo">
+                <li>
+                    <div class="userView"> <img class="background" src="/images/favicons/islam.png">
+                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
+                </li>
+                <li>
+                    <ul class="collapsible collapsible-accordion">
+                        <li><a class="collapsible-header waves-effect" style="text-align: left">Programs</a>
+                            <div class="collapsible-body">
+                                <ul>
+                                    <li><a href="/programs/">Programs Home</a></li>
+                                    <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
+                                    <li><a href="/programs/test-prep/">Test Preparation</a></li>
+                                    <li><a href="/programs/study-skills/">Study Skills</a></li>
+                                    <li><a href="/programs/college-counseling/">College Counseling</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="collapsible collapsible-accordion">
+                        <li><a class="collapsible-header waves-effect" style="text-align: left" href="/contact/">Contact</a> </li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="collapsible collapsible-accordion">
+                        <li><a class="collapsible-header waves-effect" style="text-align: left" href="/testimonials/">Testimonials</a> </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-<body>
-    <div class="enter-page-content valign-wrapper">
-        <div class="valign" style="width: 100%;">
-            <h2 class="hide-on-small-only" style="width: 100%; text-align: center; font-family: 'Roboto', sans-serif; font-weight: 300; margin-bottom: -8px">Konjoian Education Center</h2>
-            <h3 class="hide-on-med-and-up" style="width: 100%; text-align: center; font-family: 'Roboto', sans-serif; font-weight: 300; margin-bottom: -8px">Konjoian Education Center</h3>
-            <hr class="hide-on-small-only" style="width: 370px">
-            <hr class="hide-on-med-and-up" style="width: 300px">
-            <h5 style="width: 100%; text-align: center; font-family: 'Roboto', sans-serif; font-weight: 300; margin-bottom: 20px"><i>"An Easier Way to Succeed"</i></h5>
-            <div>
-                <div class="col m4 offset-m4 center" style="width: 100%">
-                    <a href="http://facebook.com/konjoianeducationcenter" class="enter-page-button waves-effect waves-light">Facebook</a>
-                    <a href="home.html" class="enter-page-button waves-effect waves-light">Enter</a>
+<body class="index">
+    <!-- INTRODUCTION IMAGE WITH INTRO -->
+    <section id="home">
+        <div class="hero">
+            <div class="hero-content">
+                <div class="col m6 s12">
+                    <h2 class="light" id="home-page-title">Konjoian Education Center</h2>
+                    <h6 class="l200"><i>An Easier Way to Succeed</i></h6>
+                    <br>
+                    <br>
+                    <!-- Calendly link widget begin -->
+                    <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script> <a href="#datmodal" class="btn black modal-trigger">Schedule</a>
+                    <!-- Calendly link widget end -->
+                    <a href="testimonials/" class="btn-flat white-text">Testimonials</a> 
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- BEGIN SITE CONTENT -->
+    <div class="container-fluid" id="home-content">
+        <div class="row">
+            <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" alt="Calendar" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
+                <h5 class="light">Flexible Scheduling</h5>
+                <div class="div-ider-color"></div>
+                <p class="grey-text 500">We know how busy your schedule can be. That's why we work to schedule time that suits your needs.</p>
+            </div>
+            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Very_Basic/info-96.png" title="https://icons8.com - Icon pack by Icons8" alt="Info" width="58">
+                <h5 class="light">Informative</h5>
+                <div class="div-ider-color"></div>
+                <p class="grey-text 500">Learn about the college admissions process and individual subjects.</p>
+            </div>
+            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Users/student_male-96.png" title="https://icons8.com - Icon pack by Icons8" alt="Student Male" width="58">
+                <h5 class="light">Tailored to You</h5>
+                <div class="div-ider-color"></div>
+                <p class="grey-text 500">We tailor our studies to what you as individual need in order to make you successful.</p>
+            </div>
+        </div>
+        <div class="row container" id="programs-home">
+            <br>
+            <br>
+            <br>
+            <h3 class="light center">Get Started</h3>
+            <p class="col s12" style="text-align: center">Our individualized programs are tailored to each individual student's needs. We offer one-on-one sessions to give students the best attention. Click the image for program to find out more.</p>
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2317.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-content"> <span class="card-title"><a href="programs/subject-tutoring/index.html">Subject Tutoring</a></span>
+                        <p>Sign up for specific subject tutoring for numerous subjects and AP course prep.</p>
+                        <br> <a href="programs/subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                </div>
+            </div>
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2312.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
+                        <p>Get started with test prep to see tremendous improvements in your test scores</p>
+                        <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                </div>
+            </div>
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2316.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-content"> <span class="card-title"><a href="programs/study-skills/">Study Skills</a></span>
+                        <p>Get help with various school-related skills such as organization and time management.</p>
+                        <br> <a href="programs/study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                </div>
+            </div>
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2308.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
+                        <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="dark">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="sitemap.html">Sitemap</a></div>
+            </div>
+        </div>
+    </footer>
+    <!-- Calendly Scheduling Modal -->
+    <div id="datmodal" class="modal bottom-sheet">
+        <div class="modal-content">
+            <h4>Schedule a Session<i class="material-icons right modal-action modal-close">close</i></h4>
+            <br>
+            <br>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/konjoian/session" style="min-width:320px;height:580px;"></div>
+            <script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
+            <!-- Calendly inline widget end -->
         </div>
     </div>
     <!-- Keep JQuery First to Avoid Bugs -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script src="/javascript/init.js"></script>
+    <script src="javascript/init.js"></script>
+    <script src="javascript/smoothscroll.js"></script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-87948805-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-87948805-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
