--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -53,7 +53,7 @@
     <div class="site-header hide-on-med-and-down">
         <!-- grey section above navigation -->
         <div class="container-fluid">
-            <a href="/home.html">
+            <a href="/index.html">
                 <h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4>
             </a>
         </div>
@@ -71,7 +71,7 @@
         </ul>
         <div class="nav-wrapper container-fluid">
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <a href="/home.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
+            <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="hide-on-med-and-down">
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
@@ -122,7 +122,7 @@
     <nav class="breadcrumb-nav z-depth-0">
         <div class="nav-wrapper container-fluid">
             <div class="col s12">
-                <a href="/home.html" class="breadcrumb grey-text">Home</a>
+                <a href="/index.html" class="breadcrumb grey-text">Home</a>
                 <a href="/programs/" class="breadcrumb grey-text">Programs</a>
                 <a href="/programs/study-skills/" class="breadcrumb grey-text">Study Skills</a>
             </div>
