--- a/sitemap.html
+++ b/sitemap.html
@@ -60,13 +60,13 @@
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
         <!-- grey section above navigation -->
-        <div class="container-fluid"> <a href="/home.html"><h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4></a> </div>
+        <div class="container-fluid"> <a href="/index.html"><h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4></a> </div>
     </div>
     <!-- end grey section -->
     <nav class="z-depth-0">
         <!-- DROPDOWN FOR PROGRAMS -->
         <ul id="programs" class="dropdown-content dropdown-content-all-other-pages">
-            <li><a href="/home.html#programs-home">Programs Home</a></li>
+            <li><a href="/index.html#programs-home">Programs Home</a></li>
             <li class="divider"></li>
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
             <li><a href="/programs/study-skills/">Study Skills</a></li>
@@ -74,7 +74,7 @@
             <li><a href="/programs/college/">College Counseling</a></li>
         </ul>
         <div class="nav-wrapper container-fluid">
-            <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <a href="/home.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
+            <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="hide-on-med-and-down">
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
