--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -142,6 +142,7 @@
                             <li class="tab col s3"><a href="#part1">Part 1</a></li>
                             <li class="tab col s3"><a href="#part2">Part 2</a></li>
                             <li class="tab col s3"><a href="#middle-school">Middle School</a></li>
+                            <li class="tab col s3"><a href="#summer">Summer</a></li>
                         </ul>
                     </div>
                     <!-- PART 1 -->
@@ -278,7 +279,70 @@
                                     <li>Thesis statement</li>
                                     <li>How to take notes - Cornell System Two Column Notes</li>
                                 </ul>
-                                <br>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- SUMMER -->
+                    <div id="summer" class="col s12">
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
+                                <ul class="bullets">
+                                    <li>This program will run for ten sessions with each session lasting (1) hour</li>
+                                    <li>The sessions are 1 on 1</li>
+                                    <li>The program will cost $700 for the seven sessions</li>
+                                </ul>
+                            </li>
+                            <li class="collection-item">
+                                <p><strong>How to Study</strong></p>
+                                <ul class="bullets">
+                                    <li>Study Steps – Flashcards / Quizlet & Study frequency
+                                        <ul class="bullets-2">
+                                            <li>Preview before class – attend class, ask good questions, take good notes</li>
+                                            <li>Review with yourself, fill gaps in notes, create questions for yourself</li>
+                                            <li>Study asking ‘why?’, ‘how?’, and ‘what if?’ questions </li>
+
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <p><strong>Study Guides</strong></p>
+                                <ul class="bullets">
+                                    <li>Making an overview at the very beginning of the study guides and before every chapter </li>
+                                    <li>Include every topic listed on the syllabus for the examination </li>
+                                    <li>Omit things that are not useful or helpful in the exam </li>
+                                    <li>1 booklet or notebook that contains everything you have learned in that course that will help you in the exam </li>
+                                </ul>
+                                <p><strong>Time Management</strong></p>
+                                <ul class="bullets">
+                                    <li>Google Calendar (that we use with students together) - after school activities (sports, clubs) </li>
+                                    <li>Students put tests, quizzes, homework assignments and the dates whenever possible
+                                        <ul class="bullets-2">
+                                            <li>When are you doing your homework? </li>
+                                            <li>Make sure you’re giving yourself an hour or two just about every night to do daily homework assignments. </li>
+                                            <li>When do you study? How often do you study without a quiz or test being the very next day? </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <p><strong>Accountability</strong></p>
+                                <ul class="bullets">
+                                    <li>Keeping track of past grades and assignments
+                                        <ul class="bullets-2">
+                                            <li>Weekly reports detailing latest grades to help diagnose strengths and weaknesses in real-time </li>
+                                        </ul>
+                                    </li>
+                                    <li>Self-advocacy</li>
+                                </ul>
+                                <p><strong>Organization</strong></p>
+                                <ul class="bullets">
+                                    <li>Color or sequence involved in organization helps visual learners </li>
+                                    <li>Talking with students about what, why, and how we’re organizing helps auditory learners </li>
+                                    <li>
+                                        Students put organization together giving them a hand on feel for the organization process
+                                        <ul class="bullets-2">
+                                            <li>Digital or Computer Organization or Physical Paper Organization (binder/folders) </li>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
