fix summer study skills

--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -139,10 +139,10 @@
                 <div class="row">
                     <div class="col s12">
                         <ul class="tabs">
-                            <li class="tab col s3"><a href="#part1">Part 1</a></li>
-                            <li class="tab col s3"><a href="#part2">Part 2</a></li>
-                            <li class="tab col s3"><a href="#middle-school">Middle School</a></li>
-                            <li class="tab col s3"><a href="#summer">Summer</a></li>
+                            <li class="tab col m3"><a href="#part1">Part 1</a></li>
+                            <li class="tab col m3"><a href="#part2">Part 2</a></li>
+                            <li class="tab col m3"><a href="#middle-school">Middle School</a></li>
+                            <li class="tab col m3"><a href="#summer">Summer</a></li>
                         </ul>
                     </div>
                     <!-- PART 1 -->
@@ -286,7 +286,7 @@
                     <div id="summer" class="col s12">
                         <ul class="collection with-header">
                             <li class="collection-header">
-                                <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
+                                <h4 class="light"><b>The Curriculum</b>: Summer Study Skills</h4>
                                 <ul class="bullets">
                                     <li>This program will run for ten sessions with each session lasting (1) hour</li>
                                     <li>The sessions are 1 on 1</li>
