--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -134,13 +134,14 @@
             <div class="intro-card">
                 <div class="card-panel">
                     <h4 class="light">Test Preparation</h4>
-                    <h6 class="grey-text text-darken-2 flow-text">We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6>
+                    <h6 class="grey-text text-darken-2 flow-text">Whether it be taking the SSAT, ISEE, or HSPT while applying to private high schools, the SAT, ACT, PSAT, and SAT Subject Tests for college applications, or, even further down the line, the GRE, GMAT, and LSAT for graduate education, we offer a test preparation program to help you get into your dream school.</h6>
                 </div>
                 <div class="row">
                     <div class="col s12">
                         <ul class="tabs">
-                            <li class="tab col s6"><a href="#sat-act">SAT/ACT</a></li>
-                            <li class="tab col s6"><a href="#gre-gmat-lsat-mcat">GRE/GMAT/LSAT/MCAT</a></li>
+                            <li class="tab col s4"><a href="#sat-act">SAT/ACT</a></li>
+                            <li class="tab col s4"><a href="#diagnostics">SAT/ACT/SSAT Diagnotic Test</a></li>
+                            <li class="tab col s4"><a href="#gre-gmat-lsat-mcat">GRE/GMAT/LSAT/MCAT</a></li>
                         </ul>
                     </div>
                     <!-- PART 1 -->
@@ -174,7 +175,22 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- PART 2 -->
+                    <!-- Part 2 -->
+                    <div id="sat-act" class="col s12">
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light"><b>The Curriculum</b>: SAT/ACT Program</h4>
+                                <ul class="bullets">
+                                    <li>The program is a six-hour commitment</li>
+                                    <li>The first session will be a proctored and timed standardized test simulation (3-4 hours) at our location </li>
+                                    <li>The second and third session (1 hour each) will include a review of the entire exam with Dave (English and Reading) and Mike (Math and Science) </li>
+                                    <li>The program will cost $300 </li>
+                                    <li>The goal of the program is to create an accurate “practice” atmosphere to prepare for the actual test as well as provide an evaluation of strategies and time management. </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- PART 3 -->
                     <div id="gre-gmat-lsat-mcat" class="col s12">
                         <ul class="collection with-header">
                             <li class="collection-header">
