--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -176,10 +176,10 @@
                         </ul>
                     </div>
                     <!-- Part 2 -->
-                    <div id="sat-act" class="col s12">
+                    <div id="diagnostic" class="col s12">
                         <ul class="collection with-header">
                             <li class="collection-header">
-                                <h4 class="light"><b>The Curriculum</b>: SAT/ACT Program</h4>
+                                <h4 class="light"><b>The Curriculum</b>: SAT/ACT/SSAT Diagnostic Program</h4>
                                 <ul class="bullets">
                                     <li>The program is a six-hour commitment</li>
                                     <li>The first session will be a proctored and timed standardized test simulation (3-4 hours) at our location </li>
