--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -176,7 +176,7 @@
                         </ul>
                     </div>
                     <!-- Part 2 -->
-                    <div id="diagnostic" class="col s12">
+                    <div id="diagnostics" class="col s12">
                         <ul class="collection with-header">
                             <li class="collection-header">
                                 <h4 class="light"><b>The Curriculum</b>: SAT/ACT/SSAT Diagnostic Program</h4>
