--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -139,9 +139,10 @@
                 <div class="row">
                     <div class="col s12">
                         <ul class="tabs">
-                            <li class="tab col s4"><a href="#sat-act">SAT/ACT</a></li>
-                            <li class="tab col s4"><a href="#diagnostics">SAT/ACT/SSAT Diagnotic Test</a></li>
-                            <li class="tab col s4"><a href="#gre-gmat-lsat-mcat">GRE/GMAT/LSAT/MCAT</a></li>
+                            <li class="tab col s3"><a href="#sat-act">SAT/ACT</a></li>
+                            <li class="tab col s3"><a href="#diagnostics">Diagnostic Test</a></li>
+                            <li class="tab col s3"><a href="#gre-gmat-lsat-mcat">GRE/GMAT/LSAT/MCAT</a></li>
+                            <li class="tab col s3"><a href="#ssat-isee-hspt">SSAT/ISEE/HSPT</a></li>
                         </ul>
                     </div>
                     <!-- PART 1 -->
@@ -219,6 +220,37 @@
                                     <li>Sentence Correction</li>
                                 </ul>
                                 <br>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- PART 1 -->
+                    <div id="ssat-isee-hspt" class="col s12">
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light"><b>The Curriculum</b>: SSAT/ISEE/HSPT/Catholic School Test Prep Program</h4>
+                                <ul class="bullets">
+                                    <li>The program will consist of ten sessions with each session lasting (1) hour</li>
+                                    <li>The sessions will be 1 on 1</li>
+                                    <li>The program will cost $850 for the ten sessions</li>
+                                </ul>
+                            </li>
+                            <li class="collection-item">
+                                <p><strong>Program Curriculum</strong></p>
+                                <p>Option A*Option B</p>
+                                <ul class="bullets">
+                                    <li>Session 1: English English</li>
+                                    <li>Session 2: English Math</li>
+                                    <li>Session 3: English English</li>
+                                    <li>Session 4: English Math</li>
+                                    <li>Session 5: English English</li>
+                                    <li>Session 6: Math Math</li>
+                                    <li>Session 7: Math English</li>
+                                    <li>Session 8: Math Math</li>
+                                    <li>Session 9: Math English</li>
+                                    <li>Session 10: Math Math</li>
+                                </ul>
+                                <br>
+                                <p><strong>*Or Vice Versa</strong></p>
                             </li>
                         </ul>
                     </div>
