--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <section id="home">
         <div class="hero">
             <div class="hero-content">
+                <span role="img" aria-label="Background Image"></span>
                 <div class="col m6 s12">
                     <h2 class="light" id="home-page-title">Konjoian Education Center</h2>
                     <h6 class="l200"><i>An Easier Way to Succeed</i></h6>
@@ -127,17 +128,17 @@
     <!-- BEGIN SITE CONTENT -->
     <div class="container-fluid" id="home-content">
         <div class="row">
-            <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" alt="Calendar" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
+            <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
                 <h5 class="light">Flexible Scheduling</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">We know how busy your schedule can be. That's why we work to schedule time that suits your needs.</p>
             </div>
-            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Very_Basic/info-96.png" title="https://icons8.com - Icon pack by Icons8" alt="Info" width="58">
+            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Very_Basic/info-96.png" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" width="58">
                 <h5 class="light">Informative</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">Learn about the college admissions process and individual subjects.</p>
             </div>
-            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Users/student_male-96.png" title="https://icons8.com - Icon pack by Icons8" alt="Student Male" width="58">
+            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Users/student_male-96.png" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" width="58">
                 <h5 class="light">Tailored to You</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">We tailor our studies to what you as individual need in order to make you successful.</p>
@@ -151,7 +152,7 @@
             <p class="col s12" style="text-align: center">Our individualized programs are tailored to each individual student's needs. We offer one-on-one sessions to give students the best attention. Click the image for program to find out more.</p>
             <div class="col m6">
                 <div class="card">
-                    <div class="card-image" style="background-image:url(images/assets/IMG_2317.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2317.jpeg); background-size:cover; height:270px" aria-label="Subject Tutoring"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/subject-tutoring/index.html">Subject Tutoring</a></span>
                         <p>Sign up for specific subject tutoring for numerous subjects and AP course prep.</p>
                         <br> <a href="programs/subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
@@ -159,7 +160,7 @@
             </div>
             <div class="col m6">
                 <div class="card">
-                    <div class="card-image" style="background-image:url(images/assets/IMG_2312.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2312.jpeg); background-size:cover; height:270px" aria-label="Test Preparation"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
                         <p>Get started with test prep to see tremendous improvements in your test scores</p>
                         <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
@@ -167,7 +168,7 @@
             </div>
             <div class="col m6">
                 <div class="card">
-                    <div class="card-image" style="background-image:url(images/assets/IMG_2316.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2316.jpeg); background-size:cover; height:270px" aria-label="Study Skills"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/study-skills/">Study Skills</a></span>
                         <p>Get help with various school-related skills such as organization and time management.</p>
                         <br> <a href="programs/study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
@@ -175,7 +176,7 @@
             </div>
             <div class="col m6">
                 <div class="card">
-                    <div class="card-image" style="background-image:url(images/assets/IMG_2308.jpeg); background-size:cover; height:270px"> </div>
+                    <div class="card-image" style="background-image:url(images/assets/IMG_2308.jpeg); background-size:cover; height:270px" aria-label="College Counseling"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
                         <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                 </div>
