--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -227,7 +227,7 @@
         </div>
         <div class="modal-footer">
             <div class="container-fluid row">
-                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
+                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
@@ -258,7 +258,7 @@
         </div>
         <div class="modal-footer">
             <div class="container-fluid row">
-                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
+                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
@@ -280,7 +280,7 @@
         </div>
         <div class="modal-footer">
             <div class="container-fluid row">
-                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
+                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
