--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -226,12 +226,13 @@
             <p class="indent">What would statistics be without lots of numbers? Sign up for our statistics one-on-one tutoring program to get those numbers in order.</p>
         </div>
         <div class="modal-footer">
-            <div class="container-fluid row">
-                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
+            <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
+            <!-- <div class="container-fluid row">
+                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Science Modal -->
@@ -257,12 +258,13 @@
             <p class="indent">Sign up today for the anatomy one-on-one program to get to learning more about anatomy.</p>
         </div>
         <div class="modal-footer">
-            <div class="container-fluid row">
-                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
+            <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
+            <!-- <div class="container-fluid row">
+                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Foreign Language Modal -->
@@ -279,12 +281,13 @@
             <p class="indent">Need Spanish help?<i>Saludar a la programma para usted.</i></p>
         </div>
         <div class="modal-footer">
-            <div class="container-fluid row">
-                <i class="col s9 modal-footer-text hide">All subject tutoring is $85 per one (1) hour session.</i>
+            <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
+            <!-- <div class="container-fluid row">
+                <i class="col s9 modal-footer-text">All subject tutoring is $85 per one (1) hour session.</i>
                 <div class="col s3">
                     <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     
